--- a/KingPIM/KingPIM.Web/Views/Shared/_Layout.cshtml
+++ b/KingPIM/KingPIM.Web/Views/Shared/_Layout.cshtml
@@ -4,15 +4,13 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
-    <!--Import Google Icon Font-->
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <!--Import materialize.css-->
-    <link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection" />
+    
+    <link href="~/css/Style.css" rel="stylesheet" />
 
 </head>
 <body>
     @RenderBody()
 
-    <script type="text/javascript" src="js/materialize.min.js"></script>
+    <script src="~/js/site.js"></script>
 </body>
 </html>
