lagt till så att startup hittar css

--- a/KingPIM/KingPIM.Web/Views/Home/Index.cshtml
+++ b/KingPIM/KingPIM.Web/Views/Home/Index.cshtml
@@ -4,5 +4,12 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Index</h2>
+<div class="container">
+
+    <h2 class="col offset-l6">Index</h2>
+
+    <a class="btn-floating btn-large waves-effect waves-light green">Add</a>
+
+</div>
+
 
