--- a/KingPIM/KingPIM.Web/Views/Shared/_Layout.cshtml
+++ b/KingPIM/KingPIM.Web/Views/Shared/_Layout.cshtml
@@ -9,8 +9,10 @@
 
 </head>
 <body>
-    @RenderBody()
-
+    <div class="container">
+        @RenderBody()
+    </div>
+    
     <script src="~/js/site.js"></script>
 </body>
 </html>
