--- a/KingPIM/KingPIM.Web/Views/Home/Index.cshtml
+++ b/KingPIM/KingPIM.Web/Views/Home/Index.cshtml
@@ -1,2 +1,6 @@
 ﻿
-
+<div class="row">
+    <div class="col s12 m8 offset-m1 xl7 offset-xl1" style="margin-top: 1.5em">
+        <a href="/account" class="btn-floating waves-effect"><i class="material-icons">account_circle</i></a>
+    </div>
+</div>
