--- a/KingPIM/KingPIM.Web/Views/Shared/_Layout.cshtml
+++ b/KingPIM/KingPIM.Web/Views/Shared/_Layout.cshtml
@@ -4,28 +4,12 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
-    
+
     <link href="~/css/Style.css" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
 </head>
 <body>
-
-    @*<ul class="collapsible">
-            <li>
-                <div class="collapsible-header">
-                    <a>First</a>
-                    <span class="new badge">4</span>
-                </div>
-                <div class="collapsible-body"><p>Lorem ipsum dolor sit amet.</p></div>
-            </li>
-            <li>
-                <div class="collapsible-header">
-                    <a>Second</a>
-                    <span class="badge">1</span>
-                </div>
-                <div class="collapsible-body"><p>Lorem ipsum dolor sit amet.</p></div>
-            </li>
-        </ul>*@
 
     <div class="sidenav sidenav-fixed">
         <ul class="collapsible popout" style="margin: 1em;">
@@ -223,7 +207,7 @@
             </li>
         </ul>
     </div>
-    
+
 
     <div class="container">
         @RenderBody()
@@ -232,11 +216,12 @@
     <script>
         document.addEventListener('DOMContentLoaded', function () {
             var elems = document.querySelectorAll('.collapsible');
-            var instances = M.Collapsible.init(elems/*, options*/ );
+            var instances = M.Collapsible.init(elems/*, options*/);
         });
     </script>
 
     <script src="~/lib/jquery/jquery.js"></script>
     <script src="~/js/site.js"></script>
+    
 </body>
 </html>
