--- a/KingPIM/KingPIM.Web/Views/Home/Index.cshtml
+++ b/KingPIM/KingPIM.Web/Views/Home/Index.cshtml
@@ -1,6 +1,32 @@
 ﻿
+<partial name="SidebarPartialView" />
+
 <div class="row">
     <div class="col s12 m8 offset-m1 xl7 offset-xl1" style="margin-top: 1.5em">
-        <a href="/account" class="btn-floating waves-effect"><i class="material-icons">account_circle</i></a>
+        <a href="#loginModal" class="btn-floating waves-effect light-green modal-trigger"><i class="material-icons">account_circle</i></a>
     </div>
 </div>
+
+<div id="loginModal" class="modal">
+    <div class="modal-content">
+        <h4 class="center">Login</h4>
+        <form class="col s12">
+            <div class="row">
+                <div class="input-field col s6">
+                    <i class="material-icons prefix">account_circle</i>
+                    <input id="icon_prefix" type="text" class="validate">
+                    <label for="icon_prefix">First Name</label>
+                </div>
+                <div class="input-field col s6">
+                    <i class="material-icons prefix">phone</i>
+                    <input id="icon_telephone" type="tel" class="validate">
+                    <label for="icon_telephone">Telephone</label>
+                </div>
+            </div>
+        </form>
+    </div>
+    <div class="modal-footer">
+        <a href="/account" class="modal-close waves-effect btn-flat">Login</a>
+    </div>
+</div>
+
