--- a/KingPIM/KingPIM.Web/Views/Shared/_Layout.cshtml
+++ b/KingPIM/KingPIM.Web/Views/Shared/_Layout.cshtml
@@ -11,217 +11,24 @@
 </head>
 <body>
 
-    <div class="sidenav sidenav-fixed">
-        <ul class="collapsible popout" style="margin: 1em;">
-            <li>
-                <div class="collapsible-header waves-effect light-blue">Category1</div>
-                <div class="collapsible-body">
-                    <ul class="collapsible popout">
-                        <li>
-                            <div class="collapsible-header waves-effect light-blue">Subcategory1</div>
-                            <div class="collapsible-body">
-                                <ul class="collapsible popout">
-                                    <li>
-                                        <div class="collapsible-header waves-effect light-blue text-darken-1">Product1</div>
-                                        <div class="collapsible-body">Product1 description</div>
-                                    </li>
-                                    <li>
-                                        <div class="collapsible-header">Product2</div>
-                                        <div class="collapsible-body">Product2 description</div>
-                                    </li>
-                                    <li>
-                                        <div class="collapsible-header">Product3</div>
-                                        <div class="collapsible-body">Product3 description</div>
-                                    </li>
-                                </ul>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="collapsible-header">Subcategory2</div>
-                            <div class="collapsible-body">
-                                <ul class="collapsible popout">
-                                    <li>
-                                        <div class="collapsible-header">Product1</div>
-                                        <div class="collapsible-body">Product1 description</div>
-                                    </li>
-                                    <li>
-                                        <div class="collapsible-header">Product2</div>
-                                        <div class="collapsible-body">Product2 description</div>
-                                    </li>
-                                    <li>
-                                        <div class="collapsible-header">Product3</div>
-                                        <div class="collapsible-body">Product3 description</div>
-                                    </li>
-                                </ul>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="collapsible-header">Subcategory3</div>
-                            <div class="collapsible-body">
-                                <ul class="collapsible popout">
-                                    <li>
-                                        <div class="collapsible-header">Product1</div>
-                                        <div class="collapsible-body">Product1 description</div>
-                                    </li>
-                                    <li>
-                                        <div class="collapsible-header">Product2</div>
-                                        <div class="collapsible-body">Product2 description</div>
-                                    </li>
-                                    <li>
-                                        <div class="collapsible-header">Product3</div>
-                                        <div class="collapsible-body">Product3 description</div>
-                                    </li>
-                                </ul>
-                            </div>
-                        </li>
-                    </ul>
-                </div>
-            </li>
-            <li>
-                <div class="collapsible-header">Category2</div>
-                <div class="collapsible-body">
-                    <ul class="collapsible popout">
-                        <li>
-                            <div class="collapsible-header waves-effect light-blue">Subcategory1</div>
-                            <div class="collapsible-body">
-                                <ul class="collapsible popout">
-                                    <li>
-                                        <div class="collapsible-header waves-effect light-blue text-darken-1">Product1</div>
-                                        <div class="collapsible-body">Product1 description</div>
-                                    </li>
-                                    <li>
-                                        <div class="collapsible-header">Product2</div>
-                                        <div class="collapsible-body">Product2 description</div>
-                                    </li>
-                                    <li>
-                                        <div class="collapsible-header">Product3</div>
-                                        <div class="collapsible-body">Product3 description</div>
-                                    </li>
-                                </ul>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="collapsible-header">Subcategory2</div>
-                            <div class="collapsible-body">
-                                <ul class="collapsible popout">
-                                    <li>
-                                        <div class="collapsible-header">Product1</div>
-                                        <div class="collapsible-body">Product1 description</div>
-                                    </li>
-                                    <li>
-                                        <div class="collapsible-header">Product2</div>
-                                        <div class="collapsible-body">Product2 description</div>
-                                    </li>
-                                    <li>
-                                        <div class="collapsible-header">Product3</div>
-                                        <div class="collapsible-body">Product3 description</div>
-                                    </li>
-                                </ul>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="collapsible-header">Subcategory3</div>
-                            <div class="collapsible-body">
-                                <ul class="collapsible popout">
-                                    <li>
-                                        <div class="collapsible-header">Product1</div>
-                                        <div class="collapsible-body">Product1 description</div>
-                                    </li>
-                                    <li>
-                                        <div class="collapsible-header">Product2</div>
-                                        <div class="collapsible-body">Product2 description</div>
-                                    </li>
-                                    <li>
-                                        <div class="collapsible-header">Product3</div>
-                                        <div class="collapsible-body">Product3 description</div>
-                                    </li>
-                                </ul>
-                            </div>
-                        </li>
-                    </ul>
-                </div>
-            </li>
-            <li>
-                <div class="collapsible-header">Category3</div>
-                <div class="collapsible-body">
-                    <ul class="collapsible popout">
-                        <li>
-                            <div class="collapsible-header waves-effect light-blue">Subcategory1</div>
-                            <div class="collapsible-body">
-                                <ul class="collapsible popout">
-                                    <li>
-                                        <div class="collapsible-header waves-effect light-blue text-darken-1">Product1</div>
-                                        <div class="collapsible-body">Product1 description</div>
-                                    </li>
-                                    <li>
-                                        <div class="collapsible-header">Product2</div>
-                                        <div class="collapsible-body">Product2 description</div>
-                                    </li>
-                                    <li>
-                                        <div class="collapsible-header">Product3</div>
-                                        <div class="collapsible-body">Product3 description</div>
-                                    </li>
-                                </ul>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="collapsible-header">Subcategory2</div>
-                            <div class="collapsible-body">
-                                <ul class="collapsible popout">
-                                    <li>
-                                        <div class="collapsible-header">Product1</div>
-                                        <div class="collapsible-body">Product1 description</div>
-                                    </li>
-                                    <li>
-                                        <div class="collapsible-header">Product2</div>
-                                        <div class="collapsible-body">Product2 description</div>
-                                    </li>
-                                    <li>
-                                        <div class="collapsible-header">Product3</div>
-                                        <div class="collapsible-body">Product3 description</div>
-                                    </li>
-                                </ul>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="collapsible-header">Subcategory3</div>
-                            <div class="collapsible-body">
-                                <ul class="collapsible popout">
-                                    <li>
-                                        <div class="collapsible-header">Product1</div>
-                                        <div class="collapsible-body">Product1 description</div>
-                                    </li>
-                                    <li>
-                                        <div class="collapsible-header">Product2</div>
-                                        <div class="collapsible-body">Product2 description</div>
-                                    </li>
-                                    <li>
-                                        <div class="collapsible-header">Product3</div>
-                                        <div class="collapsible-body">Product3 description</div>
-                                    </li>
-                                </ul>
-                            </div>
-                        </li>
-                    </ul>
-                </div>
-            </li>
-        </ul>
-    </div>
+
 
 
     <div class="container">
         @RenderBody()
     </div>
 
+
+    <script src="~/js/site.js"></script>
+
     <script>
-        document.addEventListener('DOMContentLoaded', function () {
-            var elems = document.querySelectorAll('.collapsible');
-            var instances = M.Collapsible.init(elems/*, options*/);
+        $(document).ready(function () {
+            var sidebar = $('.collapsible');
+            var instances = M.Collapsible.init(sidebar/*, options*/);
         });
+
     </script>
 
-    <script src="~/lib/jquery/jquery.js"></script>
-    <script src="~/js/site.js"></script>
-    
+
 </body>
 </html>
