Created methods for account controller

--- a/KingPIM/KingPIM.Web/Views/Shared/_Layout.cshtml
+++ b/KingPIM/KingPIM.Web/Views/Shared/_Layout.cshtml
@@ -24,7 +24,12 @@
     <script>
         $(document).ready(function () {
             var sidebar = $('.collapsible');
-            var instances = M.Collapsible.init(sidebar/*, options*/);
+            var SBinstances = M.Collapsible.init(sidebar/*, options*/);
+
+            var loginModal = $('#loginModal');
+            var LMinstances = M.Modal.init(loginModal/*, options*/)
+
+
         });
 
     </script>
