--- a/KingPIM/KingPIM.Web/Views/Home/Index.cshtml
+++ b/KingPIM/KingPIM.Web/Views/Home/Index.cshtml
@@ -10,23 +10,27 @@
 <div id="loginModal" class="modal">
     <div class="modal-content">
         <h4 class="center">Login</h4>
+        @*Login form*@
         <form class="col s12">
             <div class="row">
                 <div class="input-field col s6">
                     <i class="material-icons prefix">account_circle</i>
-                    <input id="icon_prefix" type="text" class="validate">
-                    <label for="icon_prefix">First Name</label>
+                    <input id="icon_prefix" type="text" class="validate" required>
+                    <label for="icon_prefix">Email</label>
                 </div>
                 <div class="input-field col s6">
-                    <i class="material-icons prefix">phone</i>
-                    <input id="icon_telephone" type="tel" class="validate">
-                    <label for="icon_telephone">Telephone</label>
+                    <i class="material-icons prefix">vpn_key</i>
+                    <input id="icon_vpn_key" type="password" class="validate" required>
+                    <label for="icon_vpn_key">Password</label>
                 </div>
             </div>
         </form>
     </div>
     <div class="modal-footer">
-        <a href="/account" class="modal-close waves-effect btn-flat">Login</a>
+        <a asp-action="Index" asp-controller="account" class="modal-close waves-effect btn green">
+            Login
+            <i class="material-icons right">send</i>
+        </a>
     </div>
 </div>
 
