--- a/KingPIM/KingPIM.Web/Views/Shared/SidebarPartialView.cshtml
+++ b/KingPIM/KingPIM.Web/Views/Shared/SidebarPartialView.cshtml
@@ -1,70 +1,33 @@
-﻿
+﻿@model MainPageViewModel
+
 <div class="sidenav sidenav-fixed">
-    <ul class="collapsible popout" style="margin: 1em;">
-        <li>
-            <div class="collapsible-header waves-effect light-blue">Category1</div>
-            <div class="collapsible-body">
-                <ul class="collapsible popout">
-                    <li>
-                        <div class="collapsible-header waves-effect light-blue">Subcategory1</div>
-                        <div class="collapsible-body">
-                            <ul class="collapsible popout">
-                                <li>
-                                    <div class="collapsible-header waves-effect light-blue text-darken-1">Product1</div>
-                                    <div class="collapsible-body">Product1 description</div>
-                                </li>
-                                <li>
-                                    <div class="collapsible-header">Product2</div>
-                                    <div class="collapsible-body">Product2 description</div>
-                                </li>
-                                <li>
-                                    <div class="collapsible-header">Product3</div>
-                                    <div class="collapsible-body">Product3 description</div>
-                                </li>
-                            </ul>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="collapsible-header">Subcategory2</div>
-                        <div class="collapsible-body">
-                            <ul class="collapsible popout">
-                                <li>
-                                    <div class="collapsible-header">Product1</div>
-                                    <div class="collapsible-body">Product1 description</div>
-                                </li>
-                                <li>
-                                    <div class="collapsible-header">Product2</div>
-                                    <div class="collapsible-body">Product2 description</div>
-                                </li>
-                                <li>
-                                    <div class="collapsible-header">Product3</div>
-                                    <div class="collapsible-body">Product3 description</div>
-                                </li>
-                            </ul>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="collapsible-header">Subcategory3</div>
-                        <div class="collapsible-body">
-                            <ul class="collapsible popout">
-                                <li>
-                                    <div class="collapsible-header">Product1</div>
-                                    <div class="collapsible-body">Product1 description</div>
-                                </li>
-                                <li>
-                                    <div class="collapsible-header">Product2</div>
-                                    <div class="collapsible-body">Product2 description</div>
-                                </li>
-                                <li>
-                                    <div class="collapsible-header">Product3</div>
-                                    <div class="collapsible-body">Product3 description</div>
-                                </li>
-                            </ul>
-                        </div>
-                    </li>
-                </ul>
-            </div>
-        </li>
+    <ul class="collapsible popout" style="margin-top: 0.5em;">
+        @foreach (var c in Model.Categories)
+        {
+            <li>
+
+                <div class="collapsible-header waves-effect">@c.Name</div>
+                <div class="collapsible-body">
+                    <ul class="collapsible popout">
+                        <li>
+                            
+                            <a href="Subcategory" class="btn waves-effect green center">
+                                subcategory view
+                            </a>
+                            
+                        </li>
+                        @foreach (var s in Model.Subcategories.Where(x => x.CategoryId == c.Id))
+                        {
+                            <li>
+                                <div class="collapsible-header waves-effect">@s.Name</div>
+                                <p>@s.UpdatedDate</p>
+                            </li>
+                        }
+                    </ul>
+                </div>
+
+            </li>
+        }
         
     </ul>
 </div>
