Added some color to the layout and made it so that if you publish a subcategory the category it belong to gets published aswell and if you would publish a product the subcategory and category gets published aswell

--- a/KingPIM/KingPIM.Web/Views/Home/Index.cshtml
+++ b/KingPIM/KingPIM.Web/Views/Home/Index.cshtml
@@ -1,5 +1,9 @@
 ﻿@model LoginViewModel
 
+@{
+    ViewBag.Title = "Login";
+ }
+
     @*Login form*@
 <div class="container">
     <form asp-action="Index" asp-controller="Account" method="post" class="col s12">
