--- a/KingPIM/KingPIM.Web/Views/Product/Index.cshtml
+++ b/KingPIM/KingPIM.Web/Views/Product/Index.cshtml
@@ -1,18 +1,16 @@
 ﻿@model MainPageViewModel
 
 @{
-    ViewBag.Title = "Categories";
+    ViewBag.Title = "Products";
 }
 
 <partial name="SidebarPartialView" />
 
 <div class="container">
     <div class="row" style="margin-top: 1.5em">
-
-        @*Logs you out and only shows if youre logged in*@
         <div class="right">
 
-            <a href="#createCategoryModal" class="btn waves-effect green modal-trigger">New category<i class="material-icons right">playlist_add</i></a>
+            <a href="#createProductModal" class="btn waves-effect green modal-trigger">New product<i class="material-icons right">playlist_add</i></a>
             <a asp-action="Logout" asp-controller="Account" class="btn waves-effect red">Logout<i class="material-icons right">exit_to_app</i></a>
 
         </div>
@@ -21,7 +19,7 @@
     @*This div ofsets itself from the sidebar*@
     <div style="margin-left:8em">
         <div class="row">
-            @*Table of categories*@
+            @*Table of products*@
             <table>
                 <thead>
                     <tr>
@@ -32,14 +30,14 @@
                     </tr>
                 </thead>
                 <tbody>
-                    @foreach (var c in Model.Categories)
+                    @foreach (var p in Model.Products)
                     {
                         <tr>
-                            <td>@c.Name</td>
+                            <td>@p.Name</td>
                             <td>
-                                <form asp-action="PublishCategory" asp-controller="Category">
+                                <form asp-action="PublishProduct" asp-controller="Product">
 
-                                    @if (c.Published)
+                                    @if (p.Published)
                                     {
                                         <button class="btn waves-effect green darken-1" type="submit">
                                             Published
@@ -53,22 +51,22 @@
                                             <i class="material-icons right">lock_outline</i>
                                         </button>
                                     }
-                                    <input type="hidden" name="categoryId" value="@c.Id" />
+                                    <input type="hidden" name="productId" value="@p.Id" />
 
                                 </form>
 
                             </td>
 
-                            <td>@c.Version</td>
+                            <td>@p.Version</td>
                             <td>
                                 @*Leads to edit modal*@
-                                <a href="#editCategoryModal" class="editCat btn waves-effect yellow darken-2 modal-trigger" data-id="@c.Id" data-name="@c.Name">
+                                <a href="#editProductModal" class="editProd btn waves-effect yellow darken-2 modal-trigger" data-id="@p.Id" data-name="@p.Name">
                                     Edit
                                     <i class="material-icons right">edit</i>
                                 </a>
                                 @*modal-trigger*@
                                 @*Leads to delete modal*@
-                                <a href="#deleteCategoryModal" class="deleteCat btn waves-effect red darken-2 modal-trigger" data-id="@c.Id">
+                                <a href="#deleteProductModal" class="deleteProd btn waves-effect red darken-2 modal-trigger" data-id="@p.Id">
                                     Delete
                                     <i class="material-icons right">delete</i>
                                 </a>
@@ -83,20 +81,32 @@
         </div>
     </div>
 
-    @*Create category modal*@
-    <div id="createCategoryModal" class="modal">
+    @*Create product modal*@
+    <div id="createProductModal" class="modal">
 
-        @*Create category form*@
-        <form asp-action="CreateCategory" asp-controller="Category" method="post" class="col s12">
+        @*Create subcategory form*@
+        <form asp-action="CreateProduct" asp-controller="Product" method="post" class="col s12">
 
             <div class="modal-content">
-                <h4 class="center">Create new category</h4>
+                <h4 class="center">Create new product</h4>
                 <div class="row">
+
+                    <div class="input-field col s6">
+                        <select asp-for="SubcategoryId" class="subcategoryselect">
+                            <option disabled selected>Choose subcategory</option>
+                            @foreach (var s in Model.Subcategories)
+                            {
+                                <option value="@s.Id">@s.Name</option>
+                            }
+                        </select>
+                    </div>
+
                     <div class="input-field col s6">
                         <i class="material-icons prefix">library_books</i>
                         <input asp-for="Name" id="icon_library_books" type="text" class="validate" required>
-                        <label asp-for="Name" for="icon_library_books">Category name</label>
+                        <label asp-for="Name" for="icon_library_books">Product name</label>
                     </div>
+
                 </div>
             </div>
 
@@ -114,10 +124,10 @@
         </form>
     </div>
 
-    @*Delete category modal*@
-    <div id="deleteCategoryModal" class="modal">
+    @*Delete product modal*@
+    <div id="deleteSubcategoryModal" class="modal">
         <div class="modal-content">
-            <h4 class="center">This will remove all the subcategories and products that are linked to this category!</h4>
+            <h4 class="center">This will remove all the products that are linked to this subcategory!</h4>
             <div class="row">
                 <h5 class="center">Are you sure you want to delete all of them?</h5>
             </div>
@@ -131,12 +141,12 @@
                             No, cancel
                             <i class="material-icons right">cancel</i>
                         </a>
-                        <button asp-action="DeleteCategory" asp-controller="Category"
+                        <button asp-action="DeleteSubcategory" asp-controller="Subcategory"
                                 class="modal-close btn waves-effect red darken-2 modal-trigger col" type="submit" style="margin-left:1em">
                             Yes, delete
                             <i class="material-icons right">delete</i>
                         </button>
-                        <input class="deleteCategoryModalInput" type="hidden" name="categoryId" value="" />
+                        <input class="deleteSubcategoryModalInput" type="hidden" name="subcategoryId" value="" />
 
                     </form>
                 </div>
@@ -145,16 +155,26 @@
         </div>
     </div>
 
-    @*Edit category modal*@
-    <div id="editCategoryModal" class="modal">
-        <form asp-action="UpdateCategory" asp-controller="Category">
+    @*Edit product modal*@
+    <div id="editProductModal" class="modal">
+        <form asp-action="UpdateProduct" asp-controller="Product">
             <div class="modal-content">
-                <h4 class="center">Edit Category</h4>
+                <h4 class="center">Edit Product</h4>
                 <div class="row">
                     <div class="input-field col s6">
+                        <select asp-for="SubcategoryId" class="subcategoryselect">
+                            <option disabled selected>Choose subcategory</option>
+                            @foreach (var s in Model.Subcategories)
+                            {
+                                <option value="@s.Id">@s.Name</option>
+                            }
+                        </select>
+                    </div>
+
+                    <div class="input-field col s6">
                         <i class="material-icons prefix">library_books</i>
-                        <input asp-for="Name" id="edit_library_books" type="text" class="editCategoryModalValue validate" value="" required>
-                        <label asp-for="Name" for="edit_library_books" class="active">Change category name</label>
+                        <input asp-for="Name" id="edit_library_books" type="text" class="editProductModalValue validate" value="">
+                        <label asp-for="Name" for="edit_library_books" class="active">Change product name</label>
                     </div>
                 </div>
             </div>
@@ -168,10 +188,9 @@
                     edit
                     <i class="material-icons right">edit</i>
                 </button>
-                <input class="editCategoryModalInput" type="hidden" name="categoryId" value="" />
+                <input class="editProductModalInput" type="hidden" name="productId" value="" />
             </div>
         </form>
     </div>
 
 </div>
-
