--- a/KingPIM/KingPIM.Web/Views/Product/Index.cshtml
+++ b/KingPIM/KingPIM.Web/Views/Product/Index.cshtml
@@ -20,11 +20,12 @@
     <div style="margin-left:8em">
         <div class="row">
             @*Table of products*@
-            <table>
+            <table class="striped">
                 <thead>
                     <tr>
                         <th>Name</th>
                         <th>Published</th>
+                        <th>Price</th>
                         <th>Version</th>
                         <th></th>
                     </tr>
@@ -56,11 +57,12 @@
                                 </form>
 
                             </td>
+                            <td>@String.Format("{0:C}", p.Price)</td>
 
                             <td>@p.Version</td>
                             <td>
                                 @*Leads to edit modal*@
-                                <a href="#editProductModal" class="editProd btn waves-effect yellow darken-2 modal-trigger" data-id="@p.Id" data-name="@p.Name">
+                                <a href="#editProductModal" class="editProd btn waves-effect yellow darken-2 modal-trigger" data-id="@p.Id" data-name="@p.Name" data-price="@p.Price" data-description="@p.Description">
                                     Edit
                                     <i class="material-icons right">edit</i>
                                 </a>
@@ -71,6 +73,9 @@
                                     <i class="material-icons right">delete</i>
                                 </a>
                             </td>
+                        </tr>
+                        <tr>
+                            <td colspan="5">@p.Description</td>
                         </tr>
                     }
                 </tbody>
@@ -84,7 +89,7 @@
     @*Create product modal*@
     <div id="createProductModal" class="modal">
 
-        @*Create subcategory form*@
+        @*Create product form*@
         <form asp-action="CreateProduct" asp-controller="Product" method="post" class="col s12">
 
             <div class="modal-content">
@@ -92,21 +97,34 @@
                 <div class="row">
 
                     <div class="input-field col s6">
-                        <select asp-for="SubcategoryId" class="subcategoryselect">
+                        <select asp-for="SubcategoryId" class="subcategoryselect validate" required>
                             <option disabled selected>Choose subcategory</option>
                             @foreach (var s in Model.Subcategories)
                             {
                                 <option value="@s.Id">@s.Name</option>
                             }
                         </select>
+                        <span class="helper-text" data-error="Please enter a valid subcategory"></span>
                     </div>
 
                     <div class="input-field col s6">
                         <i class="material-icons prefix">library_books</i>
-                        <input asp-for="Name" id="icon_library_books" type="text" class="validate" required>
+                        <input asp-for="Name" id="icon_library_books" type="text" class="validate" required />
                         <label asp-for="Name" for="icon_library_books">Product name</label>
+                        <span class="helper-text" data-error="Please enter a product name"></span>
                     </div>
-
+                </div>
+                <div class="row">
+                    <div class="input-field col s6">
+                        <i class="material-icons prefix">attach_money</i>
+                        <input asp-for="Price" id="productPrice" class="validate" required />
+                        <label asp-for="Price" for="productPrice">Product price</label>
+                        <span class="helper-text" data-error="Please enter a valid price"></span>
+                    </div>
+                    <div class="input-field col s6">
+                        <textarea asp-for="Description" id="createTextarea" class="createProductModalDescription materialize-textarea"></textarea>
+                        <label asp-for="Description" for="createTextarea">Description</label>
+                    </div>
                 </div>
             </div>
 
@@ -115,7 +133,7 @@
                     cancel
                     <i class="material-icons right">cancel</i>
                 </a>
-                <button class="modal-close waves-effect btn green" type="submit">
+                <button id="createProductSubmit" class="modal-close waves-effect btn green" type="submit">
                     Create
                     <i class="material-icons right">library_add</i>
                 </button>
@@ -125,11 +143,11 @@
     </div>
 
     @*Delete product modal*@
-    <div id="deleteSubcategoryModal" class="modal">
+    <div id="deleteProductModal" class="modal">
         <div class="modal-content">
-            <h4 class="center">This will remove all the products that are linked to this subcategory!</h4>
+            <h4 class="center">This will remove this product</h4>
             <div class="row">
-                <h5 class="center">Are you sure you want to delete all of them?</h5>
+                <h5 class="center">are you sure you want to remove it?</h5>
             </div>
         </div>
         <div class="modal-footer">
@@ -141,12 +159,12 @@
                             No, cancel
                             <i class="material-icons right">cancel</i>
                         </a>
-                        <button asp-action="DeleteSubcategory" asp-controller="Subcategory"
+                        <button asp-action="DeleteProduct" asp-controller="Product"
                                 class="modal-close btn waves-effect red darken-2 modal-trigger col" type="submit" style="margin-left:1em">
                             Yes, delete
                             <i class="material-icons right">delete</i>
                         </button>
-                        <input class="deleteSubcategoryModalInput" type="hidden" name="subcategoryId" value="" />
+                        <input class="deleteProductModalInput" type="hidden" name="productId" value="" />
 
                     </form>
                 </div>
@@ -177,6 +195,17 @@
                         <label asp-for="Name" for="edit_library_books" class="active">Change product name</label>
                     </div>
                 </div>
+                <div class="row">
+                    <div class="input-field col s6">
+                        <i class="material-icons prefix">attach_money</i>
+                        <input asp-for="Price" class="editProductModalPrice validate" id="productPrice" value="" />
+                        <label asp-for="Price" for="productPrice">Product price</label>
+                    </div>
+                    <div class="input-field col s6">
+                        <textarea asp-for="Description" id="editTextarea" class="editProductModalDescription materialize-textarea"></textarea>
+                        <label asp-for="Description" for="editTextarea">Description</label>
+                    </div>
+                </div>
             </div>
 
             <div class="modal-footer">
@@ -184,7 +213,7 @@
                     cancel
                     <i class="material-icons right">cancel</i>
                 </a>
-                <button class="modal-close waves-effect btn green" type="submit">
+                <button class="waves-effect btn green" type="submit">
                     edit
                     <i class="material-icons right">edit</i>
                 </button>
