Fixed publish bug where if you unpublish a product it unpublishes its sibcategory and that subcategorys category

--- a/KingPIM/KingPIM.Web/Views/Shared/_Layout.cshtml
+++ b/KingPIM/KingPIM.Web/Views/Shared/_Layout.cshtml
@@ -134,6 +134,10 @@
                 M.textareaAutoResize($('.editProductModalDescription'));
             });
 
+            // Create atribute
+            var createAttributeModal = $('#createAttributeModal');
+            var CAMInstances = M.Modal.init(createAttributeModal/*, options*/);
+
         });
 
     </script>
