--- a/KingPIM/KingPIM.Web/Views/Product/Index.cshtml
+++ b/KingPIM/KingPIM.Web/Views/Product/Index.cshtml
@@ -75,8 +75,12 @@
                             </td>
                         </tr>
                         <tr>
-                            <td colspan="5">@p.Description</td>
+                            <td colspan="5">
+                                    @p.Description
+                                <hr />
+                            </td>
                         </tr>
+                        
                     }
                 </tbody>
 
